fix width of product image on mobile

--- a/src/Components/Catalog/ProductDetails.css
+++ b/src/Components/Catalog/ProductDetails.css
@@ -21,8 +21,7 @@
 }
 
 .product-image {
-  width: 500px;
-  /* height: 500px; */
+  width: 400px;
 }
 
 .thumbnail-container {
